--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "gen:b64": "base64 -i credentials/firebase-admin.json | tr -d '\n' || type -a base64"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
