--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "next start",
     "type-check": "tsc --noEmit",
     "lint": "next lint",
+    "deps:check": "depcheck --skip-missing=true || true",
     "gen:b64": "base64 -i credentials/firebase-admin.json | tr -d '\n' || type -a base64"
   },
   "engines": {
@@ -18,30 +19,37 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
-    "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-avatar": "1.1.10",
+    "@radix-ui/react-dialog": "1.1.15",
+    "@radix-ui/react-dropdown-menu": "2.1.16",
+    "@radix-ui/react-label": "2.1.7",
+    "@radix-ui/react-separator": "1.1.7",
+    "@radix-ui/react-tabs": "1.1.13",
+    "@radix-ui/react-tooltip": "1.2.8",
     "@vercel/analytics": "^1.5.0",
-    "class-variance-authority": "^0.7.1",
+    "class-variance-authority": "0.7.1",
     "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
-    "firebase": "^12.2.1",
-    "firebase-admin": "^13.5.0",
-    "lucide-react": "^0.544.0",
+    "date-fns": "4.1.0",
+    "firebase": "12.2.1",
+    "firebase-admin": "13.5.0",
+    "lucide-react": "0.544.0",
     "next": "15.5.3",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.62.0",
-    "tailwind-merge": "^3.3.1",
-    "zod": "^4.1.8"
+    "tailwind-merge": "3.3.1",
+    "zod": "4.1.8"
   },
   "devDependencies": {
-    "cross-env": "^7.0.3",
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "cross-env": "^7.0.3",
+    "depcheck": "1.4.7",
     "eslint": "^9",
     "eslint-config-next": "15.5.3",
     "tailwindcss": "^4",
